--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totally normal website</title>
+    <link rel="icon" type="image/x-icon" href="icons/icon.ico">
     <style>
         .background {
             background-color: #002b36;
